--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-toast-message": "^2.1.6",
     "react-navigation": "^4.4.4"
